# coherence-membrane

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
conformance/: run.py  vectors.json
docs/: INTRODUCTION.md
docs/brand/: README.md
docs/superpowers/plans/: 2026-06-25-refine-distill-code.md
experiments/: criterion_independence.py
impl/js/: membrane.js  run.js
project-docs/specs/: SPEC-coherence-membrane-forward-delivery.md
schemas/: certificate.schema.json  drift-verdict.schema.json  observation.schema.json
scripts/: bench_raw_vs_png.py
src/coherence_membrane/: __init__.py  __main__.py  agent_loop.py  ascii_view.py  baseline.py  braille.py  capture.py  certificate.py  checkability.py  color.py  color_field.py  color_quantize.py  composite.py  composition.py  confidence.py  continuity.py  crosscheck.py  distill.py  distill_cli.py  distribution.py  distribution_oracle.py  dither.py  events.py  external.py  external_organs.py  field.py  field_ops.py  geometry.py  geometry_encode.py  geometry_ops.py  graph.py  graph_claims.py  graph_ops.py  graph_oracle.py  graph_search.py  lattice.py  linarith.py  live.py  livestate.py  local_global.py  (+32 more)
src/coherence_membrane/center/: __init__.py  adapters.py  atelier.py  composite.py  criterion.py  eye.py  grounding.py  judge.py  loop.py  minds.py
src/coherence_membrane/organs/: ascii_view.py  audio.py  braille.py  caption.py  color.py  contour.py  cross_verifier.py  distribution_verifier.py  graph_verifier.py  linarith_verifier.py  quantity_verifier.py  raw.py  region.py  structured.py  verifier.py  visual.py  web.py
tests/: conftest.py  test_agent_loop.py  test_ascii_view.py  test_audio_organ.py  test_baseline.py  test_bottleneck_mutation.py  test_braille.py  test_braille_organ.py  test_caption.py  test_capture.py  test_center.py  test_center_atelier.py  test_center_composite.py  test_center_eye.py  test_certificate.py  test_checkability.py  test_color.py  test_color_downscale.py  test_color_field.py  test_color_organ.py  test_color_quantize.py  test_composite.py  test_composition.py  test_confidence.py  test_conformance.py  test_continuity.py  test_contour_organ.py  test_criterion_independence.py  test_cross_verifier_organ.py  test_crosscheck.py  test_distill.py  test_distribution.py  test_distribution_oracle.py  test_distribution_verifier_organ.py  test_dither.py  test_events.py  test_external.py  test_external_organs.py  test_field.py  test_field_ops.py  (+51 more)
