[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "coherence-membrane"
version = "0.1.0"
description = "Give AI agents inspectable observations of files, images, screens, and context with receipt-backed perception."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["provenance", "perception", "accountability", "ground-truth", "witness", "observation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HarperZ9/coherence-membrane"
Repository = "https://github.com/HarperZ9/coherence-membrane"
Issues = "https://github.com/HarperZ9/coherence-membrane/issues"

[project.optional-dependencies]
# Test-only -- never in the trust path. jsonschema validates the wire-spec schemas
# (the conformance tests importorskip it, so the suite still runs without it).
test = ["pytest>=8", "jsonschema>=4"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
